feat: create the whole guide pdf automatically and change the README

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y pandoc wkhtmltopdf
+        
+      - name: Merge markdown files
+        run: |
+          chmod +x ./merge.sh
+          ./merge.sh
 
       - name: Generate PDF files
         run: |
